# k8s-aws-iam-controller

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  index.yaml  local-test.sh
.github/: install-cr.sh  install.sh
.github/workflows/: build.yaml  publish.yml
charts/k8s-aws-iam-controller/: Chart.yaml  README.md  values.yaml
charts/k8s-aws-iam-controller/crds/: crds.yaml
charts/k8s-aws-iam-controller/templates/: _helpers.tpl  deployment.yaml  serviceaccount.yaml
rustrial-k8s-aws-iam-apis/: Cargo.toml
rustrial-k8s-aws-iam-apis/examples/: gen-crds.rs
rustrial-k8s-aws-iam-apis/src/: lib.rs
rustrial-k8s-aws-iam-controller/: Cargo.toml
rustrial-k8s-aws-iam-controller/src/: arn.rs  gc.rs  iam_policy.rs  main.rs  service_account_controller.rs  trust_policy_statement_controller.rs
