[workspace]
members = ["rustrial-k8s-aws-iam-apis", "rustrial-k8s-aws-iam-controller"]
resolver = "2"

[workspace.dependencies]
kube = { version = "2.0.1", default-features = false, features = ["derive"] }
k8s-openapi = { version = "0.26.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34+deprecated"
schemars = "^1.1.0"
