[workspace]
members = ["rustrial-k8s-aws-iam-apis", "rustrial-k8s-aws-iam-controller"]
resolver = "2"

[workspace.dependencies]
kube = { version = "^3.1.0", default-features = false, features = ["derive"] }
k8s-openapi = { version = "^0.27.1", features = ["v1_35"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.0"
serde_yaml_ng = "0.10.0"
schemars = "^1.1.0"
chrono = "^0.4"
