[workspace]
members = ["rustrial-k8s-aws-iam-apis", "rustrial-k8s-aws-iam-controller"]
resolver = "2"

[workspace.dependencies]
kube = { version = "^4.0.0", default-features = false, features = ["derive"] }
k8s-openapi = { version = "^0.28.0", features = ["v1_36"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.150"
serde-saphyr = "0.0.28"
schemars = "^1.1.0"
chrono = "^0.4"
