[package]
name = "rustrial-k8s-aws-iam-apis"
version = "0.1.0"
edition = "2018"
license = "Unlicense OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.50.1", features = ["derive"]}
schemars = "^0.8.0"
k8s-openapi = { version = "0.11.0", default-features = false }
semver = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8.17"

[dev-dependencies]
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }

