[package]
name = "rustrial-k8s-aws-iam-apis"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.78.0", features = ["derive"] }
schemars = "0.8.8"
k8s-openapi = { version = "0.17.0", default-features = false }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.9.16"

[dev-dependencies]
k8s-openapi = { version = "0.17.0", default-features = false, features = [
    "v1_23",
    "schemars",
] }
