[package]
name = "rustrial-k8s-aws-iam-apis"
version = "0.1.0"
edition = "2024"
license = "Unlicense OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { workspace = true, features = ["derive"] }
schemars = {workspace = true}
k8s-openapi = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json =  { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
k8s-openapi = { workspace = true , features = [
    "v1_32",
    "schemars",
] }
